# spdx_transitive

./: .gitignore  README.md  gcc-12-base.spdx  libfile-listing-perl.spdx  output.json  output.tag  pyproject.toml
SPDX/ALL/: acpi-support.spdx  acpid.spdx  alsa-base.Cycle.spdx  alsa-topology-conf.spdx  amd64-microcode.spdx  anacron.Cycle.spdx  apt-config-icons-hidpi.spdx  apt-show-versions.spdx  aptdaemon-data.spdx  apturl-common.spdx  apturl.spdx  base-passwd.spdx  bash-completion.spdx  bind9-dnsutils.spdx  binutils-common.spdx  bluez-cups.spdx  bsdutils.spdx  busybox-static.spdx  ca-certificates-mono.Cycle.spdx  chromium-browser.spdx  cli-common.spdx  code.spdx  colord-data.spdx  command-not-found.spdx  cups-common.spdx  cups-server-common.spdx  curl.spdx  dash.spdx  dc.spdx  dctrl-tools.spdx  diffutils.spdx  distro-info-data.spdx  dmz-cursor-theme.spdx  dns-root-data.spdx  efibootmgr.spdx  emacsen-common.spdx  eog.spdx  espeak-ng-data.spdx  evince-common.spdx  file-roller.spdx  (+509 more)
SPDX/locales/: alsa-topology-conf.spdx  bash-completion.spdx  colord-data.spdx  cups-common.spdx  distro-info-data.spdx  evince-common.spdx  fonts-freefont-ttf.spdx  fonts-liberation.spdx  fonts-urw-base35.spdx  gcc-12-base.spdx  git-man.spdx  gnome-bluetooth-common.spdx  gnome-control-center-faces.spdx  gnome-desktop3-data.spdx  gnome-menus.spdx  libaudit-common.spdx  (+51 more)
app/: control_to_dict.py  deb.py  deb_spdx.py  main.py  make_tv_dict.py  merge_tv_control.py  test.py  test2.py  tv_to_dict.py
example/: example1.json
temp/: temp.py
template/: SPDX.json  formerSPDX.json
xxd/: output.tag
(+244 files in other folders)
