[tool.poetry]
name = "spdx-transitive"
version = "0.1.0"
description = ""
authors = ["tk-tanab <tk-tanab@ist.osaka-u.ac.jp>"]
readme = "README.md"
packages = [{include = "spdx_transitive"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"
isort = "^5.10.1"
Sphinx = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
